--- a/RWorksheet_Analytics.Rmd
+++ b/RWorksheet_Analytics.Rmd
@@ -129,6 +129,264 @@ newdata <- data.frame(
 )
 newdata
 ```
+2.
+```{r}
+library(rvest)
+
+scrape_reviews <- function(url) {
+ page <- read_html(url)
+ title_reviews <- page %>% 
+   html_nodes(".title") %>% 
+   html_text()
+ 
+ rating_reviews <- page %>% 
+   html_nodes(".rating-other-user-rating") %>%
+   html_text()
+ dates_reviews <- page %>% 
+   html_nodes(".review-date") %>%
+   html_text()
+ users_reviews <- page %>% 
+   html_nodes(".display-name-link") %>%
+   html_text()
+ text_review <- page %>%
+   html_nodes("div.text.show-more__control")%>%
+   html_text()
+   
+  
+ reviews1 <- data.frame(
+TITLE = title_reviews,
+   RATING = rating_reviews,
+    DATE = dates_reviews,
+    USER = users_reviews,
+  TEXT = text_review
+ )
+  
+ return(reviews1)
+}
+# Specify the URLs for the selected TV shows
+tvshow1 <- c("https://www.imdb.com/title/tt0944947/reviews/")
+reviews1 <- scrape_reviews(tvshow1[1])
+
+```
+
+```{r}
+scrape_reviews <- function(url) {
+  page <- read_html(url)
+  title_reviews <- page %>% 
+    html_nodes(".title") %>% 
+    html_text()
+  
+  rating_reviews <- page %>% 
+    html_nodes(".rating-other-user-rating") %>%
+    html_text()
+  
+  dates_reviews <- page %>% 
+    html_nodes(".review-date") %>%
+    html_text()
+  
+  users_reviews <- page %>% 
+    html_nodes(".display-name-link") %>%
+    html_text()
+  
+  text_review <- page %>%
+    html_nodes("div.text.show-more__control")%>%
+    html_text()
+  
+  max_length <- max(length(title_reviews), length(rating_reviews), length(dates_reviews), length(users_reviews), length(text_review))
+  
+  pad_with_na <- function(x, target_length) {
+    if (length(x) < target_length) {
+      c(x, rep(NA, target_length - length(x)))
+    } else {
+      x
+    }
+  }
+  
+  title_reviews <- pad_with_na(title_reviews, max_length)
+  rating_reviews <- pad_with_na(rating_reviews, max_length)
+  dates_reviews <- pad_with_na(dates_reviews, max_length)
+  users_reviews <- pad_with_na(users_reviews, max_length)
+  text_review <- pad_with_na(text_review, max_length)
+  
+  reviews2 <- data.frame(
+    TITLE = title_reviews,
+  RATING = rating_reviews,
+DATE = dates_reviews,
+   USER = users_reviews,
+    TEXT = text_review
+  )
+  
+  return(reviews2)
+}
+tvshow2 <- c("https://www.imdb.com/title/tt12343534/reviews/")
+reviews2 <- scrape_reviews(tvshow2[1])
+
+
+```
+
+```{r}
+scrape_reviews <- function(url) {
+  page <- read_html(url)
+  title_reviews <- page %>% 
+    html_nodes(".title") %>% 
+    html_text()
+  
+  rating_reviews <- page %>% 
+    html_nodes(".rating-other-user-rating") %>%
+    html_text()
+  
+  dates_reviews <- page %>% 
+    html_nodes(".review-date") %>%
+    html_text()
+  
+  users_reviews <- page %>% 
+    html_nodes(".display-name-link") %>%
+    html_text()
+  
+  text_review <- page %>%
+    html_nodes("div.text.show-more__control")%>%
+    html_text()
+  
+  max_length <- max(length(title_reviews), length(rating_reviews), length(dates_reviews), length(users_reviews), length(text_review))
+  
+  pad_with_na <- function(x, target_length) {
+    if (length(x) < target_length) {
+      c(x, rep(NA, target_length - length(x)))
+    } else {
+      x
+    }
+  }
+  
+  title_reviews <- pad_with_na(title_reviews, max_length)
+  rating_reviews <- pad_with_na(rating_reviews, max_length)
+  dates_reviews <- pad_with_na(dates_reviews, max_length)
+  users_reviews <- pad_with_na(users_reviews, max_length)
+  text_review <- pad_with_na(text_review, max_length)
+  
+  reviews3 <- data.frame(
+ TITLE = title_reviews,
+  RATING = rating_reviews,
+   DATE = dates_reviews,
+    USER = users_reviews,
+ TEXT = text_review
+  )
+  
+  return(reviews3)
+}
+tvshow3 <- c("https://www.imdb.com/title/tt2861424/reviews/")
+reviews3 <- scrape_reviews(tvshow3[1])
+```
+
+
+```{r}
+scrape_reviews <- function(url) {
+  page <- read_html(url)
+  title_reviews <- page %>% 
+    html_nodes(".title") %>% 
+    html_text()
+  
+  rating_reviews <- page %>% 
+    html_nodes(".rating-other-user-rating") %>%
+    html_text()
+  
+  dates_reviews <- page %>% 
+    html_nodes(".review-date") %>%
+    html_text()
+  
+  users_reviews <- page %>% 
+    html_nodes(".display-name-link") %>%
+    html_text()
+  
+  text_review <- page %>%
+    html_nodes("div.text.show-more__control")%>%
+    html_text()
+  
+  max_length <- max(length(title_reviews), length(rating_reviews), length(dates_reviews), length(users_reviews), length(text_review))
+  
+  pad_with_na <- function(x, target_length) {
+    if (length(x) < target_length) {
+      c(x, rep(NA, target_length - length(x)))
+    } else {
+      x
+    }
+  }
+  
+  title_reviews <- pad_with_na(title_reviews, max_length)
+  rating_reviews <- pad_with_na(rating_reviews, max_length)
+  dates_reviews <- pad_with_na(dates_reviews, max_length)
+  users_reviews <- pad_with_na(users_reviews, max_length)
+  text_review <- pad_with_na(text_review, max_length)
+  
+  reviews4 <- data.frame(
+TITLE = title_reviews,
+  RATING = rating_reviews,
+  DATE= dates_reviews,
+  USER = users_reviews,
+   TEXT = text_review
+  )
+  
+  return(reviews4)
+}
+tvshow4 <- c("https://www.imdb.com/title/tt1190634/reviews/")
+reviews4 <- scrape_reviews(tvshow4[1])
+
+
+```
+
+```{r}
+scrape_reviews <- function(url) {
+  page <- read_html(url)
+  title_reviews <- page %>% 
+    html_nodes(".title") %>% 
+    html_text()
+  
+  rating_reviews <- page %>% 
+    html_nodes(".rating-other-user-rating") %>%
+    html_text()
+  
+  dates_reviews <- page %>% 
+    html_nodes(".review-date") %>%
+    html_text()
+  
+  users_reviews <- page %>% 
+    html_nodes(".display-name-link") %>%
+    html_text()
+  
+  text_review <- page %>%
+    html_nodes("div.text.show-more__control")%>%
+    html_text()
+  
+  max_length <- max(length(title_reviews), length(rating_reviews), length(dates_reviews), length(users_reviews), length(text_review))
+  
+  pad_with_na <- function(x, target_length) {
+    if (length(x) < target_length) {
+      c(x, rep(NA, target_length - length(x)))
+    } else {
+      x
+    }
+  }
+  
+  title_reviews <- pad_with_na(title_reviews, max_length)
+  rating_reviews <- pad_with_na(rating_reviews, max_length)
+  dates_reviews <- pad_with_na(dates_reviews, max_length)
+  users_reviews <- pad_with_na(users_reviews, max_length)
+  text_review <- pad_with_na(text_review, max_length)
+  
+  reviews5 <- data.frame(
+   TITLE = title_reviews,
+   RATING = rating_reviews,
+    DATE = dates_reviews,
+   USER = users_reviews,
+  TEXT = text_review
+  )
+  
+  return(reviews5)
+}
+tvshow5 <- c("https://www.imdb.com/title/tt15227418/reviews/")
+reviews5 <- scrape_reviews(tvshow5[1])
+
+
+```
 3.
 ```{r}
 library(ggplot2)
